# facebook-ads-mcp-server

./: .gitignore  LICENSE  __main__.py  manifest.json  pyproject.toml  readme.md  requirements.txt  server.py
fb_ads/: __init__.py  ads.py  adsets.py  api.py  campaigns.py  insights.py  media.py  meta_utils.py  queries.py  s3_integration.py
