[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facebook-ads-mcp-server"
version = "2.0.0"
description = "A comprehensive Model Context Protocol (MCP) server providing full CRUD operations for Facebook/Meta Ads management"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GoMarble AI", email = "support@gomarble.ai"}
]
keywords = ["mcp", "facebook-ads", "meta-ads", "graph-api", "advertising", "marketing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.26.0",
    "requests>=2.32.3",
    "facebook_business>=20.0.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.0.0",
    "boto3>=1.34.0",
]

[project.urls]
Homepage = "https://github.com/gomarble-ai/facebook-ads-mcp-server"
Documentation = "https://github.com/gomarble-ai/facebook-ads-mcp-server#readme"
Repository = "https://github.com/gomarble-ai/facebook-ads-mcp-server"
Issues = "https://github.com/gomarble-ai/facebook-ads-mcp-server/issues"

[project.scripts]
facebook-ads-mcp-server = "server:main"

[tool.setuptools]
py-modules = ["server", "__main__"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fb_ads*"]
exclude = ["tests*", "__pycache__*"]
